crates/bind/tests/compile_fail/marker_not_bindings.rs
// The `#[binds(..)]` type must implement `Bindings`.
use bind::Bind;

struct NotBindings;

#[derive(Bind)]
#[binds(NotBindings)]
struct Nav {}

fn main() {}
